compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__external_fn__no_type_annotation_for_return.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/external_fn.rs
assertion_line: 196
expression: "\n@external(erlang, \"one\", \"one\")\npub fn one(x: Int) {\n  todo\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(erlang, "one", "one")
pub fn one(x: Int) {
  todo
}


----- ERROR
error: Missing type annotation
  ┌─ /src/one/two.gleam:3:1
  │
3 │ pub fn one(x: Int) {
  │ ^^^^^^^^^^^^^^^^^^

A return annotation is missing from this function.

Functions with external implementations must have type annotations
so we can tell what type of values they accept and return.
